bin_PROGRAMS = nctagger
nctagger_SOURCES = nctagger.c \
                   file_window.h \
                   file_window.c \
                   tag_window.h \
                   tag_window.c \
                   main_window.h \
                   main_window.c \
                   list.h \
                   list.c \
                   utils.h \
                   utils.c

nctagger_LDADD = @TAGLIB_LIBS@

nctagger_CFLAGS = @TAGLIB_CFLAGS@